prevent widgets from collapsing during editing

--- a/viewer/style/widgets.less
+++ b/viewer/style/widgets.less
@@ -61,6 +61,7 @@
   }
   .editing &{
     .flex-grow(0);
+    min-width: 3em;
   }
   #gpspage.editing &{
     .flex-grow(1);
